[package]
name = "cmx"
version = "1.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cmx"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
arrayref = "0.3.6"
spl-token = { version="3.3.1", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="3.2.3" }
mpl-token-auth-rules = { version="0.2.6", features=["no-entrypoint"] }
